# Experts_panel

./: .clauderc  .dockerignore  .env.example  .env.production.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  NEXT_SESSION.md  PROJECT_BRIEF.md  QUICK_START.md  README.md  REDDIT_OPTIMIZATION_SUMMARY.md  REDDIT_ROUND3_FINAL_REPORT.md  REDDIT_SEARCH_CRITICAL_REVIEW.md  REDDIT_TESTING_FINAL_REPORT.md  SECURITY.md  SSE_TEST_README.md  SYNC_TO_POSTGRES.md  claude-vscode-monitor.sh  cto_review_hybrid_retrieval.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  fly.toml  hybrid_retrieval_plan.md  pipeline_audit_report.md  project.gemini.md  quickstart.sh  quickstart_validate.py  railway.toml  run_cron_manual.sh  shotgun_reposcan.md  simple_drift_test.py  stress_test_gemini.py  test_fixed_drift.py  test_gemini_map.py  (+9 more)
backend/: .dockerignore  .env.example  .ruff.toml  CLAUDE.md  Dockerfile  NEXT_SESSION.md  REDDIT_SEARCH_OPTIMIZATION_REPORT.md  TEST_RESULTS.md  analyze_drift.py  analyze_drift_140.py  analyze_drift_696.py  analyze_drift_post_716.py  analyze_drift_post_720.py  analyze_specific_drift.py  apply_postgres_migrations.py  check_pending_groups.py  check_processed_status.py  check_session.session  custom_drift_analysis_680.py  dift_report_post_719.md  drift_analysis.py  drift_analysis_140_results.json  drift_analysis_676_summary.json  drift_analysis_684.json  drift_analysis_699.json  drift_analysis_713.json  drift_analysis_post_719.json  drift_analysis_post_720.json  drift_analysis_report_684.md  drift_on_synced_results.json  drift_on_synced_single.py  fix_double_nested_drift.py  fix_drift_topics.py  import_interactive.py  populate_test_data.py  pyproject.toml  refill_drift_topics.py  (+27 more)
(+1065 files in other folders)
